--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://mabira_shop_data_user:LTs8iEz9NTbsfimr0daSamGCDeQvtDcL@dpg-cvf95at2ng1s73d3fqe0-a.oregon-postgres.render.com/mabira_shop_data
+DATABASE_URL=postgresql://mabira_shop_data_fz1f_user:GZLPUjJ0u5I9J624vQmQe3oFO7vWwG3Z@dpg-d0sbqc24d50c73ee4nog-a.oregon-postgres.render.com/mabira_shop_data_fz1f
